--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "nDPI Native Bindings",
   "dependencies": {
+    "napi-macros": "^1.1.0",
     "node-gyp-build": "^3.2.2"
   },
   "scripts": {
